--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,14 @@
         android:id="@+id/agendaFragment"
         android:name="com.example.agendaapp.fragments.AgendaFragment"
         android:label="fragment_agenda"
-        tools:layout="@layout/fragment_agenda" />
+        tools:layout="@layout/fragment_agenda" >
+        <action
+            android:id="@+id/action_agendaFragment_to_detailCallFragment"
+            app:destination="@id/detailCallFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailCallFragment"
+        android:name="com.example.agendaapp.fragments.DetailCallFragment"
+        android:label="fragment_detail_call"
+        tools:layout="@layout/fragment_detail_call" />
 </navigation>
