Base app is ready now and everything works.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,8 @@
         <argument
             android:name="bundle"
             app:argType="com.example.agendaapp.objects.Contact" />
+        <action
+            android:id="@+id/action_detailCallFragment_to_agendaFragment"
+            app:destination="@id/agendaFragment" />
     </fragment>
 </navigation>
