--- a/app/src/main/res/layout/single_contact_item.xml
+++ b/app/src/main/res/layout/single_contact_item.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/round_shape_single_item"
+    android:layout_marginTop="10dp"
     android:layout_marginHorizontal="10dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginVertical="10dp"
         android:layout_marginStart="10dp"
         android:backgroundTint="@color/washed_off_purple"
@@ -31,7 +33,7 @@
 
     <TextView
         android:id="@+id/callerName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:textSize="30sp"
@@ -39,6 +41,7 @@
         app:layout_constraintBottom_toBottomOf="@id/cardView"
         app:layout_constraintStart_toEndOf="@id/cardView"
         app:layout_constraintTop_toTopOf="@id/cardView"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:text="Nuta dumbrava" />
 
     <androidx.cardview.widget.CardView
@@ -48,6 +51,7 @@
         android:layout_marginTop="20dp"
         app:cardBackgroundColor="@color/washed_off_purple"
         app:cardCornerRadius="30dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardView" />
 
