Created the tab layout and the view pager 2 structure. need to add listeners when changing between tabs.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/agendaFragment"
-        android:name="com.example.agendaapp.fragments.AgendaFragment"
+        android:name="com.example.agendaapp.fragments.contacts.AgendaFragment"
         android:label="fragment_agenda"
         tools:layout="@layout/fragment_agenda" >
         <action
