--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="green_700">#41C300</color>
     <color name="green_500">#75E900</color>
     <color name="green_200">#C6F68D</color>
+    <color name="grey">#DCDCDC</color>
 
 </resources>
