--- a/app/src/main/res/layout/single_agenda_item.xml
+++ b/app/src/main/res/layout/single_agenda_item.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/caller_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="20dp"
         android:textSize="30sp"
