--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -8,9 +8,11 @@
 
 
     <LinearLayout
+        android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:visibility="invisible"
         android:gravity="center">
 
         <ImageView
@@ -34,12 +36,12 @@
             android:text="@string/how_to_grant_permission"
             android:textAlignment="center"
             android:textSize="25sp"
-            android:layout_marginBottom="50dp"/>
+            android:layout_marginBottom="30dp"/>
 
         <Button
             android:id="@+id/grant_permissions_button"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="80dp"
             android:background="@drawable/round_button"
             android:text="@string/grant_permission_button_text"
             android:textSize="30sp"
