--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -11,9 +11,9 @@
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical"
-        android:visibility="invisible"
-        android:gravity="center">
+        android:visibility="invisible">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -24,31 +24,31 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
             android:text="@string/read_contacts_permission"
             android:textAlignment="center"
-            android:textStyle="bold"
             android:textSize="30sp"
-            android:layout_marginBottom="15dp"/>
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
             android:text="@string/how_to_grant_permission"
             android:textAlignment="center"
-            android:textSize="25sp"
-            android:layout_marginBottom="30dp"/>
+            android:textSize="25sp" />
 
         <Button
             android:id="@+id/grant_permissions_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
+            android:layout_marginHorizontal="30dp"
             android:background="@drawable/round_button"
             android:text="@string/grant_permission_button_text"
-            android:textSize="30sp"
             android:textAllCaps="false"
-            android:layout_marginHorizontal="30dp"
-            android:textStyle="bold"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
