Changed the text size in the toolbar and created empty fragment for a detailed contact.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,10 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:background="@color/green_500"
         app:title="Agenda"
+        app:titleTextAppearance="@style/ToolbarTextStyle"
         app:titleTextColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"/>
 
