--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="MyTheme" parent="@android:style/Theme.Holo.Light">
-        <item name="android:actionBarStyle">@style/MyTheme.MyActionBar</item>
-    </style>
 
-    <style name="MyTheme.MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:titleTextStyle">@style/MyTheme.MyActionBar.TitleTextStyle</item>
-    </style>
 
-    <style name="MyTheme.MyActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:background">#81CFEB</item>
+    <style name="ToolbarTextStyle" parent="Widget.AppCompat.Toolbar">
+        <item name="android:textSize">30sp</item>
+        <item name="android:paddingBottom">10dp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
 
 </resources>
