--- a/app/src/main/res/layout/fragment_detailed_contact.xml
+++ b/app/src/main/res/layout/fragment_detailed_contact.xml
@@ -11,7 +11,7 @@
         android:id="@+id/person_sample_image"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/user_detailed_contact"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,21 +23,22 @@
         android:id="@+id/caller_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:maxLines="2"
         android:textAlignment="center"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/person_sample_image"
-        tools:text="Nuta dumbrava" />
+        tools:text="Nuta dumbrava aber mit langer " />
 
 
     <LinearLayout
         android:id="@+id/mobile_information_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="25dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/caller_name">
 
@@ -58,6 +59,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/caller_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
@@ -80,13 +82,14 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginBottom="55dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingHorizontal="15dp"
         android:weightSum="2"
-        app:layout_constraintTop_toBottomOf="@+id/mobile_information_layout"
-        tools:layout_editor_absoluteX="25dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mobile_information_layout">
 
         <ImageView
             android:id="@+id/message_button"
