Made a class which contains all constants and a companion object PermissionChecker.kt in order to improve code reusability.

--- a/app/src/main/res/layout/fragment_detailed_contact.xml
+++ b/app/src/main/res/layout/fragment_detailed_contact.xml
@@ -68,6 +68,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/settings_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
