--- a/app/src/main/res/layout/fragment_detailed_contact.xml
+++ b/app/src/main/res/layout/fragment_detailed_contact.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DetailedContactFragment">
+    tools:context=".ui.detailedView.DetailedContactFragment">
 
 
     <ImageView
@@ -69,7 +69,7 @@
 
         <ImageView
             android:id="@+id/settings_button"
-            android:layout_width="50dp"
+            android:layout_width="39dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginEnd="15dp"
