--- a/app/src/main/res/layout/fragment_edit_contact.xml
+++ b/app/src/main/res/layout/fragment_edit_contact.xml
@@ -4,31 +4,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     tools:context=".ui.detailedView.EditContactFragment">
 
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/avatar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+
     <TextView
+        android:id="@+id/name_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="@string/name"
+        android:textColor="@color/green_700"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image" />
+
+
+    <EditText
         android:id="@+id/caller_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints="New Name"
+        android:hint="@string/new_name"
+        android:inputType="text"
         android:textSize="30sp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/name_text"
+        tools:text="Nuta Dumbrava" />
+
 
     <TextView
+        android:id="@+id/number_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="@string/mobile"
+        android:textColor="@color/green_700"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/caller_name" />
+
+    <EditText
         android:id="@+id/caller_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:autofillHints="New number"
+        android:inputType="number"
         android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@id/caller_name" />
+        app:layout_constraintTop_toBottomOf="@id/number_text"
+        tools:text="0043 560 3002 200" />
 
 
     <Button
         android:id="@+id/update_contact_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="UPDATE CONTACT"
+        android:background="@drawable/round_button"
+        android:paddingVertical="20dp"
+        android:text="@string/update_contact"
+        android:textAllCaps="false"
         android:textColor="@color/white"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/caller_number" />
