--- a/app/src/main/res/layout/fragment_detailed_contact.xml
+++ b/app/src/main/res/layout/fragment_detailed_contact.xml
@@ -74,6 +74,7 @@
             android:layout_gravity="center"
             android:layout_marginEnd="15dp"
             android:src="@drawable/settings"
+            android:visibility="gone"
             tools:ignore="ContentDescription" />
 
     </LinearLayout>
