--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="green_500">#75E900</color>
     <color name="green_200">#C6F68D</color>
     <color name="grey">#F1F1F1</color>
+    <color name="red">#F44336</color>
 
 </resources>
