--- a/app/src/main/res/layout/fragment_detailed_contact.xml
+++ b/app/src/main/res/layout/fragment_detailed_contact.xml
@@ -18,6 +18,17 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
+    <ImageView
+        android:id="@+id/delete_button"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:src="@drawable/delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
 
     <TextView
         android:id="@+id/caller_name"
