--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
     <style name="ToolbarTextStyle" parent="Widget.AppCompat.Toolbar">
         <item name="android:textSize">30sp</item>
         <item name="android:paddingBottom">10dp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="DialogTheme" parent="android:style/Theme.Dialog">
+        <item name="android:windowMinWidthMajor">90%</item>
+        <item name="android:windowMinWidthMinor">90%</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginVertical">30dp</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 
 </resources>
