--- a/app/src/main/res/layout/confirm_delete_dialog.xml
+++ b/app/src/main/res/layout/confirm_delete_dialog.xml
@@ -29,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/confirmation_delete_text">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/no_button"
             android:layout_width="150dp"
             android:layout_height="60dp"
@@ -42,6 +42,7 @@
             app:layout_constraintTop_toBottomOf="@id/confirmation_delete_text" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/confirm_button"
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:layout_marginStart="30dp"
