Updating the name is working but i need to do something about the updating of the contact.

--- a/app/src/main/res/layout/fragment_detailed_contact.xml
+++ b/app/src/main/res/layout/fragment_detailed_contact.xml
@@ -85,7 +85,7 @@
             android:layout_gravity="center"
             android:layout_marginEnd="15dp"
             android:src="@drawable/settings"
-            android:visibility="gone"
+            android:visibility="visible"
             tools:ignore="ContentDescription" />
 
     </LinearLayout>
