--- a/app/src/main/res/layout/single_agenda_item.xml
+++ b/app/src/main/res/layout/single_agenda_item.xml
@@ -15,6 +15,7 @@
         android:padding="20dp"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:textColor = "?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
