--- a/app/src/main/res/layout/confirm_delete_dialog.xml
+++ b/app/src/main/res/layout/confirm_delete_dialog.xml
@@ -26,6 +26,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/confirmation_delete_text">
 
         <androidx.appcompat.widget.AppCompatButton
