--- a/app/src/main/res/layout/fragment_add_new_contact.xml
+++ b/app/src/main/res/layout/fragment_add_new_contact.xml
@@ -41,6 +41,7 @@
         android:hint="@string/enter_the_name_here"
         android:inputType="text"
         android:textColorHint="@color/red"
+        android:textColor="?android:textColorTertiary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/name_text" />
@@ -66,6 +67,7 @@
         android:inputType="number"
         android:textColorHint="@color/red"
         android:textSize="30sp"
+        android:textColor="?android:textColorTertiary"
         android:hint="@string/enter_the_number_here"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/number_text" />
