--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,8 @@
         <!-- Customize your theme here. -->
         <item name="android:textColorPrimary">@color/black</item>
 
+        <item name="android:textColorTertiary">@color/white</item>
+
     </style>
     
     <style name="DialogStyle" parent="Theme.AppCompat.Dialog">
