--- a/app/src/main/res/layout/single_recent_call_item.xml
+++ b/app/src/main/res/layout/single_recent_call_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginTop="10dp"
+    android:elevation="5dp"
     android:background="@drawable/round_shape_single_item">
 
 
