--- a/app/src/main/res/layout-sw720dp/fragment_add_new_contact.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_add_new_contact.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,10 +24,10 @@
         android:id="@+id/name_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="90dp"
         android:text="@string/name"
         android:textColor="@color/green_700"
-        android:textSize="45sp"
+        android:textSize="55sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image" />
@@ -38,12 +38,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autofillHints="New Name"
-        android:hint="@string/new_name"
-        android:textColor="?android:textColorTertiary"
+        android:hint="@string/enter_the_name_here"
         android:inputType="text"
-        android:textSize="60sp"
-        app:layout_constraintTop_toBottomOf="@id/name_text"
-        tools:text="Nuta Dumbrava" />
+        android:textColorHint="@color/red"
+        android:textColor="?android:textColorTertiary"
+        android:textSize="80sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/name_text" />
 
 
     <TextView
@@ -53,7 +54,7 @@
         android:layout_marginTop="40dp"
         android:text="@string/mobile"
         android:textColor="@color/green_700"
-        android:textSize="45sp"
+        android:textSize="55sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/caller_name" />
@@ -64,10 +65,12 @@
         android:layout_height="wrap_content"
         android:autofillHints="New number"
         android:inputType="number"
-        android:textSize="60sp"
+        android:textColorHint="@color/red"
+        android:textSize="80sp"
         android:textColor="?android:textColorTertiary"
-        app:layout_constraintTop_toBottomOf="@id/number_text"
-        tools:text="0043 560 3002 200" />
+        android:hint="@string/enter_the_number_here"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/number_text" />
 
 
     <Button
@@ -77,10 +80,10 @@
         android:background="@drawable/round_button"
         android:paddingVertical="20dp"
         android:layout_marginHorizontal="70dp"
-        android:text="@string/update_contact"
+        android:text="@string/add_new_contact"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="45sp"
+        android:textSize="55sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
