Updated some toasts with translatable statements.

--- a/app/src/main/res/layout/fragment_detailed_contact.xml
+++ b/app/src/main/res/layout/fragment_detailed_contact.xml
@@ -50,7 +50,7 @@
             android:textAlignment="center"
             android:textSize="50sp"
             android:textStyle="bold"
-            tools:text="Nuta dumbrava aber mit langer " />
+            tools:text="Hei cum e shisha? " />
 
 
         <LinearLayout
